# GA-with-Dynamic-fitness-function

./: CMakeLists.txt  README.md
include/: Benchmarks2D.h  BitFlipMutation.h  Chromosome.h  DecodeUtils.h  DummyCrossover.h  DummyFitness.h  DummyMutation.h  DummySelection.h  FitnessFixed.h  FitnessFlattened.h  FitnessFourier.h  FitnessRastrigin.h  FitnessShapers2D.h  FitnessTaylor.h  GA.h  ICrossover.h  IFitness.h  IMutation.h  ISelection.h  Progress.h  RastriginCore.h  SinglePointCrossover.h  TournamentSelection.h
src/: BitFlipMutation.cpp  DecodeUtils.cpp  DummyCrossover.cpp  DummyFitness.cpp  DummyMutation.cpp  DummySelection.cpp  FitnessFixed.cpp  FitnessFlattened.cpp  FitnessFourier.cpp  FitnessRastrigin.cpp  FitnessShapers2D.cpp  FitnessTaylor.cpp  GA.cpp  Progress.cpp  SinglePointCrossover.cpp  TournamentSelection.cpp  main.cpp
